informationsite and carousel adatative

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 VITE_SUPABASE_URL=<your-supabase-url-here>
 VITE_SUPABASE_PUBLISHABLE_KEY=<your-publishable-key-here>
+VITE_FOLDER_SITE_IMAGES=<your-folder-for-site-images>
